# surrealdb-live-message

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
config/: default.toml  test.toml
examples/: durable_restart.rs  fanout.rs  graceful_shutdown.rs  messaging.rs  parent_token.rs  production_shutdown.rs  worker_pool.rs
src/: agent.rs  error.rs  lib.rs  logger.rs  main.rs  message.rs  sdb_server.rs  settings.rs  top.rs
src/subsystems/: agent.rs  agents.rs  sdb.rs
test/: integration_test.rs
tests/: integration_test.rs
