[package]
name = "surrealdb_live_message"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
surrealdb = { version = "3.0.5", features = ["kv-mem"] }
surrealdb-types = "3.0.5"
futures = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0"
tracing = "0.1.4"
tracing-subscriber = "0.3"
config = "0.15"
bollard = "0.20"
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "gzip",
] }

[dev-dependencies]
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
